# stock_crawler

./: .gitignore  Cargo.toml
src/: main.rs
src/database/: mod.rs
src/entity/: amount_alert.rs  mod.rs  stock.rs
src/request/: mod.rs
src/router/: amount_alert_router.rs  mod.rs  stock_router.rs
src/scraping/: mod.rs
src/service/: amount_alert_service.rs  mod.rs  stock_service.rs
